test/test_examples/syntactic_examples/syntax_error/error_prologue_10.zig
// Syntax error: missing imported path token

const ifj = @import(); 

pub fn main() void {

}  